--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
         "build": "ng build",
         "prod": "ng build --prod",
         "test": "ng test",
+        "coverage": "ng test --coverage",
         "lint": "ng lint",
         "e2e": "ng e2e"
     },
@@ -26,22 +27,16 @@
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
+        "@angular-builders/jest": "^7.3.1",
         "@angular-devkit/build-angular": "~0.13.0",
         "@angular/cli": "~7.3.1",
         "@angular/compiler-cli": "~7.2.0",
         "@angular/language-service": "~7.2.0",
-        "@types/jasmine": "~2.8.8",
-        "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
         "codelyzer": "~4.5.0",
         "husky": "^1.3.1",
-        "jasmine-core": "~2.99.1",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "^4.0.0",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~2.0.1",
-        "karma-jasmine": "~1.1.2",
-        "karma-jasmine-html-reporter": "^0.2.2",
+        "jest": "^23.6.0",
+        "jest-preset-angular": "^6.0.2",
         "prettier": "^1.16.4",
         "pretty-quick": "^1.10.0",
         "protractor": "~5.4.0",
@@ -51,7 +46,11 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "npm run prod && pretty-quick --staged"
+            "pre-commit": "npm test && npm run prod && pretty-quick --staged"
         }
+    },
+    "jest": {
+        "preset": "jest-preset-angular",
+        "setupTestFrameworkScriptFile": "<rootDir>/src/setupJest.ts"
     }
 }
