--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,9 +8,11 @@
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
+        "strict": true,
+        "strictPropertyInitialization": false,
         "target": "es5",
         "typeRoots": ["node_modules/@types"],
         "types": ["jest"],
-        "lib": ["es2017", "dom"]
+        "lib": ["es2018", "dom"]
     }
 }
