created mockserver, added mock endpoints

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
         "prod": "ng build --prod",
         "test": "ng test",
         "coverage": "ng test --coverage",
+        "mock": "mockserver -p 9000 -m mockserver",
         "lint": "ng lint",
         "e2e": "ng e2e"
     },
@@ -37,9 +38,11 @@
         "@angular/language-service": "~7.2.0",
         "@types/node": "~8.9.4",
         "codelyzer": "~4.5.0",
+        "faker": "^4.1.0",
         "husky": "^1.3.1",
         "jest": "^23.6.0",
         "jest-preset-angular": "^6.0.2",
+        "mockserver": "^3.0.0",
         "prettier": "^1.16.4",
         "pretty-quick": "^1.10.0",
         "protractor": "~5.4.0",
