--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -53,7 +53,8 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "frontend:build"
+                        "browserTarget": "frontend:build",
+                        "proxyConfig": "proxy.config.json"
                     },
                     "configurations": {
                         "production": {
