--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
         "@angular/cli": "~7.3.1",
         "@angular/compiler-cli": "~7.2.0",
         "@angular/language-service": "~7.2.0",
+        "@ngrx/schematics": "^7.2.0",
         "@types/node": "~8.9.4",
         "codelyzer": "~4.5.0",
         "faker": "^4.1.0",
