--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.vvt</groupId>
     <artifactId>officebooking</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>officebooking</name>
+    <name>officeBooking</name>
     <description>OfficeBook Project for ETU</description>
 
     <properties>
@@ -41,12 +41,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <artifactId>jackson-databind</artifactId>
-                    <groupId>com.fasterxml.jackson.core</groupId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
