--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <groupId>com.vvt</groupId>
     <artifactId>officebooking</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.3</version>
     <name>officeBooking</name>
     <description>OfficeBook Project for ETU</description>
 
