implemented hot switching of API servers in development mode, renamed interface from Person" to "User", changed URL to login

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -54,7 +54,7 @@
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
                         "browserTarget": "frontend:build",
-                        "proxyConfig": "proxy.config.json"
+                        "proxyConfig": "proxy.config.js"
                     },
                     "configurations": {
                         "production": {
