implemented "Profile" page, added path to router config, added actions, effect, fixed tests

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -113,5 +113,13 @@
             }
         }
     },
-    "defaultProject": "officeBooking"
+    "defaultProject": "officeBooking",
+    "schematics": {
+        "@ngrx/schematics:component": {
+            "styleext": "css"
+        }
+    },
+    "cli": {
+        "defaultCollection": "@ngrx/schematics"
+    }
 }
